--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "0.0.1",
+    "@merc/react-timeline": "^0.1.42",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.1.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-parallax": "^3.0.3",
+    "react-particles-js": "^3.2.1",
+    "react-reveal": "^1.2.2",
+    "react-scripts": "3.4.1",
+    "react-tilt": "^0.1.4",
+    "react-typewriting-effect": "^1.0.3",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
